Adding Russian language

--- a/src/locales/ru/translation.json
+++ b/src/locales/ru/translation.json
@@ -1,77 +1,77 @@
 {
   "alerts": {
-      "accept": "Accept",
-      "basic": "Basic alert",
-      "closable": "Closable alert",
-      "customActions": "Alert with custom actions",
-      "decline": "Decline",
-      "detail": "Detail",
-      "done": "Done",
-      "error": "Error text",
-      "errorDescription": "Error Description",
-      "icons": "Alert with icon",
-      "info": "Info text",
-      "infoDescription": "Additional description and information about copywriting.",
-      "success": "Success Text",
-      "successDescription": "Detailed description and advice about successful copywriting.",
-      "types": "Alert types",
-      "undo": "UNDO",
-      "warning": "Warning text",
-      "warningDescription": "This is a warning notice about copywriting."
+      "accept": "Принять",
+      "basic": "Основное предупреждение",
+      "closable": "Закрываемое оповещение",
+      "customActions": "Оповещение с пользовательскими действиями",
+      "decline": "Снижение",
+      "detail": "Деталь",
+      "done": "Сделано",
+      "error": "Текст ошибки",
+      "errorDescription": "Описание ошибки",
+      "icons": "Оповещение со значком",
+      "info": "Информационный текст",
+      "infoDescription": "Дополнительное описание и информация о копирайтинге.",
+      "success": "Текст успеха",
+      "successDescription": "Подробное описание и советы по успешному копирайтингу.",
+      "types": "Типы предупреждений",
+      "undo": "Отменить",
+      "warning": "Текст предупреждения",
+      "warningDescription": "Это предупреждение о копирайтинге."
   },
   "auth": {
-      "signUpSuccessDescription": "Please use your new credentials to log in",
+      "signUpSuccessDescription": "Пожалуйста, используйте ваши новые учетные данные для входа в систему",
       "signUpSuccessMessage": "Новый пользователь создан"
   },
   "autoCompletes": {
       "antDesign": "AntDesign",
-      "antDesignFaq": "AntDesign FAQ",
-      "antDesignLanguage": "AntDesign design language",
-      "antDesignUI": "AntDesign UI",
-      "antDesignUIFaq": "AntDesign UI FAQ",
-      "articles": "Articles",
-      "basic": "Basic AutoComplete",
-      "categories": "AutoComplete with categories",
-      "customOptions": "AutoComplete with custom options",
-      "inputHere": "input here",
-      "libraries": "Libraries",
-      "solutions": "Solutions"
+      "antDesignFaq": "AntDesign часто задаваемые вопросы",
+      "antDesignLanguage": "AntDesign язык дизайна",
+      "antDesignUI": "AntDesign пользовательский интерфейс",
+      "antDesignUIFaq": "AntDesign ЧАСТО задаваемые вопросы по пользовательскому интерфейсу",
+      "articles": "Статьи",
+      "basic": "Базовое автозаполнение",
+      "categories": "Автозаполнение с помощью категорий",
+      "customOptions": "Автозаполнение с пользовательскими параметрами",
+      "inputHere": "введите данные здесь",
+      "libraries": "Библиотеки",
+      "solutions": "Решения"
   },
   "breadcrumbs": {
-      "antd": "Ant Design",
-      "application": "An Application",
-      "applicationCenter": "Application Center",
-      "applicationList": "Application List",
-      "basic": "Basic breadcrumb",
-      "button": "Button",
-      "component": "Component",
-      "customSeparator": "Breadcrumb with custom separator",
-      "general": "General",
-      "home": "Home",
-      "layout": "Layout",
-      "navigation": "Navigation",
-      "withDropdown": "Breadcrumb with dropdown",
-      "withIcon": "Breadcrumb with icon"
+      "antd": "Analytix Дизайн",
+      "application": "Приложение",
+      "applicationCenter": "Центр приложения ",
+      "applicationList": "Список приложений",
+      "basic": "Обычная панировочная крошка",
+      "button": "Кнопка",
+      "component": "Компонент",
+      "customSeparator": "Навигационная цепочка с пользовательским разделителем",
+      "general": "Общие",
+      "home": "Домой",
+      "layout": "Расположение",
+      "navigation": "Навигация",
+      "withDropdown": "Навигационная цепочка с выпадающим списком",
+      "withIcon": "Навигационная цепочка со значком"
   },
   "buttons": {
-      "click": "Click me!",
-      "danger": "Danger buttons",
-      "dashed": "Dashed",
-      "default": "Default",
-      "disabled": "Disabled buttons",
-      "ghost": "Ghost",
-      "icons": "Icons buttons",
-      "large": "Large",
-      "link": "Link",
-      "loading": "Loading",
-      "loadings": "Loading buttons",
-      "primary": "Primary",
-      "search": "Search",
-      "severities": "Button severities",
-      "sizes": "Button sizes",
-      "small": "Small",
-      "text": "Text",
-      "types": "Button types"
+      "click": "Нажми меня",
+      "danger": "Кнопки опасности",
+      "dashed": "Пунктирный",
+      "default": "По умолчанию",
+      "disabled": "Отключенные кнопки",
+      "ghost": "Привидение",
+      "icons": "Значки кнопки",
+      "large": "Большой",
+      "link": "Ссылка",
+      "loading": "Погрузка",
+      "loadings": "Кнопки загрузки",
+      "primary": "Первичный",
+      "search": "Поиск",
+      "severities": "Строгости в отношении пуговиц",
+      "sizes": "Размеры пуговиц",
+      "small": "Маленький",
+      "text": "Текст",
+      "types": "Типы кнопок"
   },
   "charts": {
       "averageValue": "Average Value",
@@ -473,45 +473,45 @@
       }
   },
   "header": {
-      "changeLanguage": "Change language",
-      "changeTheme": "Change theme",
-      "darkTheme": "Dark",
-      "lightTheme": "Light",
-      "logout": "Logout",
+      "changeLanguage": "Выберите язык",
+      "changeTheme": "Выберите тему",
+      "darkTheme": "Тёмная",
+      "lightTheme": "Светлая",
+      "logout": "Выйти",
       "nightMode": {
-          "from": "From",
-          "title": "Nightmode",
-          "to": "To"
+          "from": "От",
+          "title": "Ночной режим",
+          "to": "К"
       },
       "notifications": {
-          "loginAttempt": "There was an attempt to log in to your account from another device",
+          "loginAttempt": "Была предпринята попытка войти в вашу учетную запись с другого устройства",
           "mention": "mentioned you in <0>{{place}}</0>",
-          "noNotifications": "No notifications yet",
-          "readAll": "Mark all as read",
-          "serverError": "The server is not responding, try again later",
-          "successPayment": "Your payment was successfully made",
-          "viewAll": "View all"
+          "noNotifications": "Уведомлений пока нет",
+          "readAll": "Отметьте все как прочитанное",
+          "serverError": "Сервер не отвечает, повторите попытку позже",
+          "successPayment": "Ваш платеж был успешно произведен",
+          "viewAll": "Просмотреть все"
       },
-      "search": "Search"
+      "search": "Поиск"
   },
   "inputs": {
-      "basic": "Basic input",
-      "clipboard": "clipboard input",
-      "default": "default size",
-      "enterName": "Enter your username",
-      "extra": "Extra information",
-      "func": "Functional inputs",
-      "large": "large size",
-      "openURL": "open URL input",
-      "password": "Password input",
-      "passwordText": "input password",
-      "prefixSuffix": "Prefix & suffix",
-      "prePost": "Pre & post tabs",
-      "search": "Search inputs",
-      "searchText": "input search text",
-      "sizes": "Input sizes",
-      "small": "small size",
-      "textarea": "Textarea"
+      "basic": "Базовый ввод",
+      "clipboard": "ввод в буфер обмена",
+      "default": "размер по умолчанию",
+      "enterName": "Введите свое имя пользователя",
+      "extra": "Дополнительная информация",
+      "func": "Функциональные входы",
+      "large": "большой размер",
+      "openURL": "открытый ввод URL-адреса",
+      "password": "Ввод пароля",
+      "passwordText": "введите пароль",
+      "prefixSuffix": "Префикс и суффикс",
+      "prePost": "Вкладки до и после публикации",
+      "search": "Поиск входных данных",
+      "searchText": "введите текст для поиска",
+      "sizes": "Входные размеры",
+      "small": "Малый размер",
+      "textarea": "Текстовая область"
   },
   "kanban": {
       "addParticipant": "Set assignee",
