--- a/src/locales/ru/translation.json
+++ b/src/locales/ru/translation.json
@@ -514,91 +514,91 @@
       "textarea": "Текстовая область"
   },
   "kanban": {
-      "addParticipant": "Set assignee",
-      "addTag": "Add tag",
-      "createColumn": "Create new column",
-      "description": "Description",
-      "label": "Label",
-      "sameTag": "You can't add the same tag!",
-      "tags": "Tags",
-      "title": "Title",
-      "unnamedLabel": "Unnamed label",
-      "archive": "Archive"
+      "addParticipant": "Назначенный правопреемник",
+      "addTag": "Добавить тег",
+      "createColumn": "Создать новый столбец",
+      "description": "Описание",
+      "label": "Этикетка",
+      "sameTag": "Вы не можете добавить один и тот же тег!",
+      "tags": "Теги",
+      "title": "Заглавие",
+      "unnamedLabel": "Неназванный лейбл",
+      "archive": "Архив"
   },
   "login": {
-      "facebookLink": "Continue with Facebook",
-      "googleLink": "Continue with Google",
-      "loginInfo": "Enter your email address and password to access admin panel",
-      "noAccount": "Don’t have an account? Create one",
-      "rememberMe": "Remember me",
-      "signupLink": "here"
+      "facebookLink": "Продолжайте с Facebook",
+      "googleLink": "Продолжайте работать с Google",
+      "loginInfo": "Введите свой адрес электронной почты и пароль для доступа к панели администратора",
+      "noAccount": "У вас нет учетной записи? Создайте новую",
+      "rememberMe": "Помни меня",
+      "signupLink": "здесь"
   },
   "modals": {
-      "basic": "Basic modal",
-      "error": "Error",
-      "errorTitle": "This is an error message",
-      "fullscreen": "Fullscreen",
-      "fullscreenTitle": "Fullscreen Modal",
-      "info": "Info",
-      "infoModal": "Information modal",
-      "infoTitle": "This is a notification message",
-      "large": "Large",
-      "largeTitle": "Large Modal",
-      "middle": "Middle",
-      "middleTitle": "Middle Modal",
-      "open": "Open Modal",
-      "sizes": "Modal sizes",
-      "small": "Small",
-      "smallTitle": "Small Modal",
-      "someContent": "Some contents...",
-      "success": "Success",
-      "successTitle": "This is a success message",
-      "warning": "Warning",
-      "warningTitle": "This is a warning message"
+      "basic": "Базовый модальный",
+      "error": "Ошибка",
+      "errorTitle": "Это сообщение об ошибке",
+      "fullscreen": "Полноэкранный",
+      "fullscreenTitle": "Полноэкранный режим",
+      "info": "Инфо",
+      "infoModal": "Информационный режим",
+      "infoTitle": "Это уведомительное сообщение",
+      "large": "Большой",
+      "largeTitle": "Большой модальный",
+      "middle": "Средний",
+      "middleTitle": "Средний модальный",
+      "open": "Открытый модальный",
+      "sizes": "Модальные размеры",
+      "small": "Маленький",
+      "smallTitle": "Малый модальный",
+      "someContent": "Некоторое содержание...",
+      "success": "Успех",
+      "successTitle": "Это сообщение об успешном завершении",
+      "warning": "Предупреждение",
+      "warningTitle": "Это предупреждающее сообщение"
   },
   "newPassword": {
-      "description": "Your new password must be different from previous password",
-      "successDescription": "Please, use your email with a new password to log in",
-      "successMessage": "New password was set",
-      "title": "Create new password"
+      "description": "Ваш новый пароль должен отличаться от предыдущего пароля",
+      "successDescription": "Пожалуйста, используйте свой адрес электронной почты с новым паролем для входа в систему",
+      "successMessage": "Был установлен новый пароль",
+      "title": "Создайте новый пароль"
   },
   "newsFeed": {
-      "apply": "Apply",
-      "authorSearch": "Author",
-      "filter": "Filter",
-      "from": "From",
-      "reset": "Reset",
-      "tag": "Tag",
-      "titleSearch": "Title",
-      "to": "To"
+      "apply": "Применять",
+      "authorSearch": "Автор",
+      "filter": "Фильтр",
+      "from": "От",
+      "reset": "Сброс",
+      "tag": "Метка",
+      "titleSearch": "Заглавие",
+      "to": "К"
   },
   "notifications": {
-      "basic": "Basic notification",
-      "basicTitle": "Basic",
-      "error": "Error",
-      "errorDescription": "Error Description",
-      "errorTitle": "Error text",
-      "info": "Info",
-      "infoDescription": "Info description",
-      "infoTitle": "Info text",
-      "success": "Success",
-      "successDescription": "Success description",
-      "successTitle": "Success Text",
-      "types": "Notification types",
-      "warning": "Warning",
-      "warningDescription": "Warning description",
-      "warningTitle": "Warning text",
-      "withoutDescription": "Notifications without description"
+      "basic": "Основное уведомление",
+      "basicTitle": "Основной",
+      "error": "Ошибка",
+      "errorDescription": "Описание ошибки",
+      "errorTitle": "Текст ошибки",
+      "info": "Инфо",
+      "infoDescription": "Информационное описание",
+      "infoTitle": "Информационный текст",
+      "success": "Успех",
+      "successDescription": "Описание успеха",
+      "successTitle": "Текст успеха",
+      "types": "Типы уведомлений",
+      "warning": "Предупреждение",
+      "warningDescription": "Описание предупреждения",
+      "warningTitle": "Текст предупреждения",
+      "withoutDescription": "Уведомления без описания"
   },
   "popconfirm": {
-      "async": "Asynchronously close",
-      "basic": "Basic Popconfirm",
-      "content": "Are you sure to delete this task?",
-      "no": "No",
-      "openAsync": "Open Popconfirm with async logic",
-      "positions": "Popconfirm positions",
-      "yes": "Yes",
-      "yesClick": "Clicked on Yes."
+      "async": "Асинхронно закрывать",
+      "basic": "Базовое всплывающее подтверждение",
+      "content": "Вы уверены, что хотите удалить эту задачу?",
+      "no": "Нет",
+      "openAsync": "Откройте Popconfirm с помощью асинхронной логики",
+      "positions": "Позиции Popconfirm",
+      "yes": "Да",
+      "yesClick": "Нажал на кнопку \"Да\"."
   },
   "popovers": {
       "basic": "Basic popover",
