Adding Russian language

--- a/src/locales/ru/translation.json
+++ b/src/locales/ru/translation.json
@@ -623,64 +623,64 @@
       "triggers": "Popover triggers"
   },
   "profile": {
-      "fullness": "fullness of your profile",
+      "fullness": "полнота вашего профиля",
       "nav": {
           "notifications": {
-              "actionRequired": "Action required",
-              "activities": "Activities",
-              "allNews": "All news",
-              "description": "Choose for which activities you want to get an email or push notification.",
-              "directMessages": "Direct messages",
-              "importantNews": "Important news and updates",
-              "mentions": "Mentions",
-              "push": "Push",
-              "reminders": "Reminders",
-              "settings": "Notifications settings",
-              "SMS": "SMS",
-              "title": "Notifications"
+              "actionRequired": "Требуемые действия",
+              "activities": "Мероприятия",
+              "allNews": "Все новости",
+              "description": "Выберите, за какие действия вы хотите получать электронное письмо или push-уведомление.",
+              "directMessages": "Прямые сообщения",
+              "importantNews": "Важные новости и обновления",
+              "mentions": "Упоминает",
+              "push": "Толкать",
+              "reminders": "Напоминания",
+              "settings": "Настройки уведомлений",
+              "SMS": "СМС",
+              "title": "Уведомления"
           },
           "payments": {
-              "addNewCard": "Add New Card",
-              "cardholderName": "Cardholder Name",
-              "cardNumber": "Card Number",
-              "cardTheme": "Card Theme",
+              "addNewCard": "Добавить новую карточку",
+              "cardholderName": "Имя владельца карты",
+              "cardNumber": "номер карты",
+              "cardTheme": "Тема открытки",
               "CVV": "CVV",
-              "date": "Date",
-              "details": "Details",
-              "expDate": "Exp. Date",
-              "noHistory": "There is no payment history at the moment",
-              "paymentHistory": "Payment history",
-              "paymentMethod": "Payment Method",
-              "recipient": "Recipient",
-              "sameCard": "You can't add the same card!",
+              "date": "Дата",
+              "details": "Подробности",
+              "expDate": "Примерная дата",
+              "noHistory": "На данный момент истории платежей нет",
+              "paymentHistory": "История платежей",
+              "paymentMethod": "Способ оплаты",
+              "recipient": "Получатель",
+              "sameCard": "Вы не можете добавить одну и ту же карточку!",
               "status": {
-                  "failed": "Failed",
-                  "paid": "Paid",
-                  "pending": "Pending",
-                  "scheduled": "Scheduled",
-                  "title": "Status"
+                  "failed": "Неудачный",
+                  "paid": "Оплачено",
+                  "pending": "Ожидаемый",
+                  "scheduled": "Планируемый",
+                  "title": "Статус"
               },
-              "title": "Payments",
-              "totalAmount": "Total Amount",
-              "yourCardNumber": "Your card number",
-              "yourName": "Your name"
+              "title": "Платежи",
+              "totalAmount": "Общая сумма",
+              "yourCardNumber": "Номер вашей карты",
+              "yourName": "Ваше имя"
           },
           "personalInfo": {
-              "birthday": "Birthday",
-              "contactInfo": "Contact Info",
-              "female": "Female",
-              "language": "Language",
-              "male": "Male",
-              "nickname": "Nickname",
-              "notValidWebsite": "Please input a valid URL!",
-              "notVerified": "Not verified",
-              "otherInfo": "Other info",
-              "sex": "Sex",
-              "socialLinks": "Social links",
-              "title": "Personal Info",
-              "verified": "Verified",
-              "website": "Website",
-              "wrongNumber": "Wrong number"
+              "birthday": "День рождения",
+              "contactInfo": "Контактная информация",
+              "female": "Женский",
+              "language": "Язык",
+              "male": "Самец",
+              "nickname": "Прозвище",
+              "notValidWebsite": "Пожалуйста, введите действительный URL-адрес!",
+              "notVerified": "Не проверено",
+              "otherInfo": "Дополнительная информация",
+              "sex": "Пол",
+              "socialLinks": "Социальные сети",
+              "title": "Личная информация",
+              "verified": "Проверенный",
+              "website": "Вебсайт",
+              "wrongNumber": "Ошиблись номером"
           },
           "securitySettings": {
               "changePassword": "Change Password",
