Translate to Russian

--- a/src/locales/ru/translation.json
+++ b/src/locales/ru/translation.json
@@ -74,181 +74,181 @@
       "types": "Типы кнопок"
   },
   "charts": {
-      "averageValue": "Average Value",
-      "barLabel": "Bar Animation Delay",
-      "coal": "Coal",
-      "direct": "Direct",
-      "females": "Females",
-      "gas": "Gas",
-      "gradientLabel": "Gradient Stacked Area",
-      "hydro": "Hydro",
-      "incomeOf": "Income of Germany and France since 1950",
-      "lineRace": "Line Race",
-      "males": "Males",
-      "nuclear": "Nuclear",
-      "oil": "Oil",
-      "pie": "Pie",
-      "scatter": "Scatter",
-      "search": "Search Engine",
-      "union": "Union Ads",
-      "video": "Video Ads",
-      "visitorsFrom": "Visitors from"
+      "averageValue": "Среднее значение",
+      "barLabel": "Задержка анимации полосы",
+      "coal": "Уголь",
+      "direct": "Прямой",
+      "females": "Женщины",
+      "gas": "Газ",
+      "gradientLabel": "Область с градиентным штабелированием",
+      "hydro": "Гидро",
+      "incomeOf": "Доходы Германии и Франции с 1950 года",
+      "lineRace": "Линейная гонка",
+      "males": "Мужчины",
+      "nuclear": "Ядерный",
+      "oil": "Нефть",
+      "pie": "Пирог",
+      "scatter": "Разброс",
+      "search": "поисковая система",
+      "union": "Объявления профсоюзов",
+      "video": "Видеореклама",
+      "visitorsFrom": "Посетители из"
   },
   "checkboxes": {
       "apple": "Apple",
-      "basic": "Basic checkbox",
-      "check": "Check",
-      "checkbox": "Checkbox",
-      "checked": "Checked",
-      "controlled": "Controlled checkbox",
-      "disable": "Disable",
-      "disabled": "Disabled",
-      "disabledCheckbox": "Disabled checkbox",
-      "enable": "Enable",
-      "enabled": "Enabled",
-      "group": "Checkbox group",
-      "orange": "Orange",
-      "pear": "Pear",
-      "uncheck": "Uncheck",
-      "unchecked": "Unchecked"
+      "basic": "Основной флажок",
+      "check": "Проверять",
+      "checkbox": "Флажок",
+      "checked": "Проверен",
+      "controlled": "Контролируемый флажок",
+      "disable": "Отключать",
+      "disabled": "Нетрудоспособный",
+      "disabledCheckbox": "Флажок отключен",
+      "enable": "Включить",
+      "enabled": "Включенный",
+      "group": "Группа флажков",
+      "orange": "Оранжевый",
+      "pear": "Груша",
+      "uncheck": "Снимите флажок",
+      "unchecked": "Непроверенный"
   },
   "common": {
-      "address": "Address",
-      "advancedForms": "Advanced Forms",
-      "age": "Age",
-      "alert": "Alert",
-      "apps": "Apps",
-      "auth": "Auth",
-      "authPages": "Auth Pages",
-      "auto": "Auto",
-      "autocomplete": "AutoComplete",
-      "avatar": "Avatar",
-      "back": "Back",
-      "badge": "Badge",
+      "address": "Адрес",
+      "advancedForms": "Продвинутые формы",
+      "age": "Возраст",
+      "alert": "Тревога",
+      "apps": "Приложения",
+      "auth": "Аутентификация",
+      "authPages": "Страницы авторизации",
+      "auto": "Авто",
+      "autocomplete": "Автозаполнение",
+      "avatar": "Аватар",
+      "back": "Назад",
+      "badge": "Значок",
       "breadcrumbs": "Breadcrumbs",
-      "button": "Button",
-      "calendar": "Calendar",
-      "cancel": "Cancel",
-      "cardiologist": "Cardiologist",
-      "charts": "Charts",
-      "checkbox": "Checkbox",
-      "city": "City",
-      "clientError": "Client Error",
-      "collapse": "Collapse",
-      "confirm": "Confirm",
-      "confirmPassword": "Confirm Password",
-      "confirmPasswordError": "The two passwords that you entered do not match!",
-      "copied": "Copied to clipboard",
-      "copy": "Copy",
-      "country": "Country",
+      "button": "Кнопка",
+      "calendar": "Календарь",
+      "cancel": "Отменить",
+      "cardiologist": "Кардиолог",
+      "charts": "Графики",
+      "checkbox": "Флажок",
+      "city": "Город",
+      "clientError": "Ошибка клиента",
+      "collapse": "Коллапс",
+      "confirm": "Подтверждать",
+      "confirmPassword": "Подтвердите пароль",
+      "confirmPasswordError": "Два введенных вами пароля не совпадают!",
+      "copied": "Скопировано в буфер обмена",
+      "copy": "Копировать",
+      "country": "Страна",
       "nft-dashboard": "NFT Dashboard",
       "medical-dashboard": "Medical Dashboard",
-      "dataDisplay": "Data display",
-      "dataTables": "Data Tables",
-      "dateTime": "Date & Time",
-      "dateTimePicker": "DateTime Picker",
-      "day": "day",
-      "deleteQuestion": "Are you sure you want to delete?",
-      "dermatologist": "Dermatologist",
-      "doctor": "Doctor",
-      "dropdown": "Dropdown",
-      "edit": "Edit",
+      "dataDisplay": "Отображение данных",
+      "dataTables": "Таблицы данных",
+      "dateTime": "Дата и время",
+      "dateTimePicker": "Средство выбора даты и времени",
+      "day": "день",
+      "deleteQuestion": "Вы уверены, что хотите удалить?",
+      "dermatologist": "Дерматолог",
+      "doctor": "Врач",
+      "dropdown": "Выпадающий",
+      "edit": "Редактировать",
       "email": "Email",
-      "emailError": "Please input users name or delete this field",
-      "notValidEmail":"Please input a valid email address!",
-      "error": "Error",
-      "feed": "Feed",
-      "firstName": "First Name",
-      "forgotPass": "Forgot Password",
-      "forgotPasswordPage": "Forgot password page",
-      "formError": "An error has occured",
-      "forms": "Forms",
+      "emailError": "Пожалуйста, введите имя пользователя или удалите это поле",
+      "notValidEmail":"Пожалуйста, введите действительный адрес электронной почты!",
+      "error": "Ошибка",
+      "feed": "Кормить",
+      "firstName": "Имя",
+      "forgotPass": "Забыли пароль",
+      "forgotPasswordPage": "Страница с забытым паролем",
+      "formError": "Произошла ошибка",
+      "forms": "Формы",
       "googleMap": "Google Maps",
-      "here": "here",
-      "info": "Information",
-      "input": "Input",
-      "inputCode": "Input 6 digit code",
+      "here": "здесь",
+      "info": "Информация",
+      "input": "Ввод",
+      "inputCode": "Введите 6-значный код",
       "kanban": "Kanban",
-      "keywords": "Any keywords?",
-      "kg": "kg",
-      "lastName": "Last Name",
-      "leafletMap": "Leaflet Maps",
-      "loading": "Loading...",
-      "lock": "Lock",
-      "login": "Log In",
-      "maintenance": "Maintenance",
-      "map": "Map",
-      "maps": "Maps",
-      "modal": "Modal",
-      "moreDetails": "More details",
-      "name": "Name",
-      "neurologist": "Neurologist",
-      "newPassword": "New Password",
-      "notFound": "Sorry, there’s nothing found",
-      "notification": "Notification",
-      "ok": "Ok",
-      "oncologist": "Oncologist",
-      "oops": "Oops!",
-      "openInNewTab": "Open in new tab",
-      "ophthalmologist": "Ophthalmologist",
-      "pages": "Pages",
-      "pagination": "Pagination",
-      "password": "Password",
-      "payment": "Payment",
-      "phone": "Phone",
-      "pigeonMaps": "Pigeon Maps",
-      "popconfirm": "Popconfirm",
-      "popover": "Popover",
-      "profilePage": "Profile Page",
-      "progress": "Progress",
+      "keywords": "Какие-нибудь ключевые слова?",
+      "kg": "кг",
+      "lastName": "Фамилия",
+      "leafletMap": "Карты-листовки",
+      "loading": "Загрузка...",
+      "lock": "Замок",
+      "login": "Авторизоваться",
+      "maintenance": "Поддержка",
+      "map": "Карта",
+      "maps": "Карты",
+      "modal": "Модальный",
+      "moreDetails": "Более подробная информация",
+      "name": "Имя",
+      "neurologist": "Невролог",
+      "newPassword": "Новый пароль",
+      "notFound": "Извините, ничего не найдено",
+      "notification": "Уведомление",
+      "ok": "Хорошо",
+      "oncologist": "Онколог",
+      "oops": "Ой!",
+      "openInNewTab": "Открыть в новой вкладке",
+      "ophthalmologist": "Офтальмолог",
+      "pages": "Страницы",
+      "pagination": "Пагинация",
+      "password": "Пароль",
+      "payment": "Платеж",
+      "phone": "Телефон",
+      "pigeonMaps": "Голубиные карты",
+      "popconfirm": "Всплывающее подтверждение",
+      "popover": "Булочка",
+      "profilePage": "Страница профиля",
+      "progress": "Прогресс",
       "pwa": "Install PWA",
-      "radio": "Radio",
-      "rate": "Rate",
-      "reactSimpleMaps": "React Simple Maps",
-      "requiredField": "This field is required!",
-      "resetPassword": "Reset password",
-      "result": "Result",
-      "save": "Save",
-      "securityCode": "Security Code",
-      "select": "Select",
-      "serverError": "Server Error",
-      "signUp": "Sign Up",
-      "skeleton": "Skeleton",
-      "specifity": "Specifity",
-      "spinner": "Spinner",
-      "steps": "Steps",
-      "submit": "Submit",
-      "success": "Success",
-      "surgeon": "Surgeon",
+      "radio": "Радио",
+      "rate": "Ставка",
+      "reactSimpleMaps": "Реагируйте на простые карты",
+      "requiredField": "Это поле обязательно для заполнения!",
+      "resetPassword": "Сброс пароля",
+      "result": "Результат",
+      "save": "Сохранить",
+      "securityCode": "код безопасности",
+      "select": "Выбрать",
+      "serverError": "Ошибка сервера",
+      "signUp": "Подписывать",
+      "skeleton": "Скелет",
+      "specifity": "Специфичность",
+      "spinner": "Волчок",
+      "steps": "Шаги",
+      "submit": "Представить",
+      "success": "Успех",
+      "surgeon": "Хирург",
       "switch": "Switch",
-      "tabs": "Tabs",
-      "tags": "Tags",
-      "tempDiagnosis": "Without new treatments, the W.H.O. says, the number of new cancer patients could reach twenty-seven million.",
-      "therapist": "Therapist",
-      "today": "Today",
-      "twoFactorAuthPage": "Two-Factor auth page",
-      "ui": "UI Components",
-      "upload": "Upload",
-      "verifCodeSent": "We have sent a verification code to your email",
-      "verifyEmailPage": "Verify email page",
-      "warning": "Warning",
-      "zipcode": "Zipcode",
-      "delete":"Delete"
+      "tabs": "Вкладки",
+      "tags": "Теги",
+      "tempDiagnosis": "По словам ВОЗ, без новых методов лечения число новых больных раком могло бы достичь двадцати семи миллионов.",
+      "therapist": "Терапевт",
+      "today": "Сегодня",
+      "twoFactorAuthPage": "Страница двухфакторной аутентификации",
+      "ui": "Компоненты пользовательского интерфейса",
+      "upload": "Загружать",
+      "verifCodeSent": "Мы отправили проверочный код на ваш электронный адрес",
+      "verifyEmailPage": "Подтвердите страницу электронной почты",
+      "warning": "Предупреждение",
+      "zipcode": "Почтовый индекс",
+      "delete":"Удалить"
   },
   "medical-dashboard": {
       "activity": {
-          "kcalBurned": "kcal burned on",
-          "title": "Activity"
+          "kcalBurned": "ккал, сожженных на",
+          "title": "Деятельность"
       },
       "bloodScreening": {
-          "flag": "Flag",
-          "high": "HIGH",
-          "low": "LOW",
-          "norm": "NORM",
-          "result": "Result",
-          "test": "Test",
-          "title": "Blood screening",
-          "units": "Units"
+          "flag": "Флаг",
+          "high": "Высокий",
+          "low": "Низкий",
+          "norm": "Норма",
+          "result": "Результат",
+          "test": "Тест",
+          "title": "Скрининг крови",
+          "units": "Единицы"
       },
       "bones": "Bones",
       "covid": {
