fixed some bugs

--- a/src/locales/ru/translation.json
+++ b/src/locales/ru/translation.json
@@ -141,7 +141,7 @@
       "copied": "Скопировано в буфер обмена",
       "copy": "Копировать",
       "country": "Страна",
-      "nft-dashboard": "NFT Dashboard",
+      "nft-dashboard": "Поиск Субъектов",
       "medical-dashboard": "Medical Dashboard",
       "dataDisplay": "Отображение данных",
       "dataTables": "Таблицы данных",
