--- a/src/locales/ru/translation.json
+++ b/src/locales/ru/translation.json
@@ -126,6 +126,7 @@
       "back": "Назад",
       "badge": "Значок",
       "breadcrumbs": "Breadcrumbs",
+      "birthday": "Дата рождения",
       "button": "Кнопка",
       "calendar": "Календарь",
       "cancel": "Отменить",
@@ -194,6 +195,7 @@
       "pages": "Страницы",
       "pagination": "Пагинация",
       "password": "Пароль",
+      "patronymic": "Отчество",
       "payment": "Платеж",
       "phone": "Телефон",
       "pigeonMaps": "Голубиные карты",
@@ -212,7 +214,7 @@
       "securityCode": "код безопасности",
       "select": "Выбрать",
       "serverError": "Ошибка сервера",
-      "signUp": "Подписывать",
+      "signUp": "Регистрация",
       "skeleton": "Скелет",
       "specifity": "Специфичность",
       "spinner": "Волчок",
