Added a check for a valid token when navigating through pages.

--- a/src/locales/ru/translation.json
+++ b/src/locales/ru/translation.json
@@ -133,6 +133,7 @@
       "cardiologist": "Кардиолог",
       "charts": "Графики",
       "checkbox": "Флажок",
+      "change-log": "Журнал изменений",
       "city": "Город",
       "clientError": "Ошибка клиента",
       "collapse": "Коллапс",
