The registration form has been redesigned, now it is displayed in two lines

--- a/src/locales/ru/translation.json
+++ b/src/locales/ru/translation.json
@@ -126,7 +126,7 @@
       "back": "Назад",
       "badge": "Значок",
       "breadcrumbs": "Breadcrumbs",
-      "birthday": "Дата рождения",
+      "birthdate": "Дата рождения",
       "button": "Кнопка",
       "calendar": "Календарь",
       "cancel": "Отменить",
