Added constants with URLs

--- a/src/locales/ru/translation.json
+++ b/src/locales/ru/translation.json
@@ -434,7 +434,7 @@
           "location": "Местоположение",
           "login": "Электронная почта/Логин",
           "loginError": "Требуется электронная почта/Логин для входа в систему",
-          "male": "Самец",
+          "male": "Мужчина",
           "mr": "Г-н",
           "mrs": "Г-жа",
           "next": "Следующий",
