Fixed a bug with a double display of the list of subjects. Added keys for items when displaying subject contacts

--- a/src/locales/ru/translation.json
+++ b/src/locales/ru/translation.json
@@ -221,6 +221,7 @@
       "spinner": "Волчок",
       "steps": "Шаги",
       "submit": "Представить",
+      "subject-info": "Информация о субъекте",
       "success": "Успех",
       "surgeon": "Хирург",
       "switch": "Switch",
