The description has been changed in the registration form, and the "Remember me" field has also been removed

--- a/src/locales/ru/translation.json
+++ b/src/locales/ru/translation.json
@@ -533,7 +533,7 @@
   "login": {
       "facebookLink": "Продолжайте с Facebook",
       "googleLink": "Продолжайте работать с Google",
-      "loginInfo": "Введите свой адрес электронной почты и пароль для доступа к панели администратора",
+      "loginInfo": "Введите свой адрес электронной почты и пароль для доступа к личному кабинету",
       "noAccount": "У вас нет учетной записи? Создайте новую",
       "rememberMe": "Помни меня",
       "signupLink": "здесь"
