refactored sider menu

--- a/src/locales/ru/translation.json
+++ b/src/locales/ru/translation.json
@@ -144,6 +144,7 @@
       "copied": "Скопировано в буфер обмена",
       "copy": "Копировать",
       "country": "Страна",
+      "dashboards": "Информация ИМНС и ЕГР",
       "nft-dashboard": "Поиск Субъектов",
       "medical-dashboard": "Medical Dashboard",
       "dataDisplay": "Отображение данных",
@@ -213,6 +214,7 @@
       "resetPassword": "Сброс пароля",
       "result": "Результат",
       "save": "Сохранить",
+      "searchSubject": "Поиск субъекта",
       "securityCode": "код безопасности",
       "select": "Выбрать",
       "serverError": "Ошибка сервера",
