added link unn in dashboard detailed information

--- a/src/locales/ru/translation.json
+++ b/src/locales/ru/translation.json
@@ -179,7 +179,7 @@
       "leafletMap": "Карты-листовки",
       "loading": "Загрузка...",
       "lock": "Замок",
-      "login": "Авторизоваться",
+      "login": "Авторизация ",
       "maintenance": "Поддержка",
       "map": "Карта",
       "maps": "Карты",
