changed font style footer, changed index route

--- a/src/locales/ru/translation.json
+++ b/src/locales/ru/translation.json
@@ -179,7 +179,7 @@
       "leafletMap": "Карты-листовки",
       "loading": "Загрузка...",
       "lock": "Замок",
-      "login": "Авторизация ",
+      "login": "Авторизироваться",
       "maintenance": "Поддержка",
       "map": "Карта",
       "maps": "Карты",
