added feedback in sider menu

--- a/src/locales/ru/translation.json
+++ b/src/locales/ru/translation.json
@@ -162,6 +162,7 @@
       "notValidEmail":"Пожалуйста, введите действительный адрес электронной почты!",
       "error": "Ошибка",
       "feed": "Кормить",
+      "feedback": "Обратная связь",
       "firstName": "Имя",
       "forgotPass": "Забыли пароль",
       "forgotPasswordPage": "Страница с забытым паролем",
