added button to home page in sign in and sign up pages

--- a/src/locales/ru/translation.json
+++ b/src/locales/ru/translation.json
@@ -180,7 +180,7 @@
       "leafletMap": "Карты-листовки",
       "loading": "Загрузка...",
       "lock": "Замок",
-      "login": "Авторизироваться",
+      "login": "Авторизация",
       "maintenance": "Поддержка",
       "map": "Карта",
       "maps": "Карты",
@@ -234,6 +234,7 @@
       "tempDiagnosis": "По словам ВОЗ, без новых методов лечения число новых больных раком могло бы достичь двадцати семи миллионов.",
       "therapist": "Терапевт",
       "today": "Сегодня",
+      "toHome": "На главную",
       "twoFactorAuthPage": "Страница двухфакторной аутентификации",
       "ui": "Компоненты пользовательского интерфейса",
       "upload": "Загружать",
