changed name's button in sign up form

--- a/src/locales/ru/translation.json
+++ b/src/locales/ru/translation.json
@@ -219,7 +219,7 @@
       "securityCode": "код безопасности",
       "select": "Выбрать",
       "serverError": "Ошибка сервера",
-      "signUp": "Регистрация",
+      "signUp": "Зарегистрироваться",
       "skeleton": "Скелет",
       "specifity": "Специфичность",
       "spinner": "Волчок",
