The accepted conditions have been changed in the registration form

--- a/src/locales/ru/translation.json
+++ b/src/locales/ru/translation.json
@@ -219,6 +219,7 @@
       "securityCode": "код безопасности",
       "select": "Выбрать",
       "serverError": "Ошибка сервера",
+      "signUpTitle": "Регистрация",
       "signUp": "Зарегистрироваться",
       "skeleton": "Скелет",
       "specifity": "Специфичность",
@@ -771,14 +772,15 @@
       "main": "Внутренняя ошибка сервера"
   },
   "signup": {
-      "agree": "Я согласен с тем, что",
+      "agree": "Заполняя и отправляя данные из настоящей веб-формы подтверждаю ознакомление с ",
       "alreadyHaveAccount": "У вас уже есть учетная запись? Авторизоваться",
-      "and": "и",
+      "and": "и выражаю свое согласие на обработку моих персональных данных в порядке, объеме и на условиях, ею установленных, а также то что ознакомился(лась) и принимаю условия",
       "facebookLink": "Зарегистрируйтесь на Facebook",
       "googleLink": "Зарегистрируйтесь в Google",
       "loginLink": "здесь",
-      "privacyOPolicy": "Политика конфиденциальности",
-      "termOfUse": "Условия использования"
+      "personalDataPolicy": "Политикой обработки персональных данных",
+      "publicAgreement": "Публичного договора",
+      "dot": "."
   },
   "skeletons": {
       "active": "Активный скелет",
