changed button's title in reset password form

--- a/src/locales/ru/translation.json
+++ b/src/locales/ru/translation.json
@@ -395,6 +395,7 @@
   "forgotPassword": {
       "description": "Введите свой адрес электронной почты, и мы вышлем проверочный код для сброса вашего пароля",
       "sendInstructions": "Отправляйте инструкции",
+      "resetPassword": "Сбросить пароль",
       "successReset": "Мы отправили на ваш электронный адрес ссылку для сброса"
   },
   "forms": {
