fixed text in reset password form

--- a/src/locales/ru/translation.json
+++ b/src/locales/ru/translation.json
@@ -157,8 +157,9 @@
       "doctor": "Врач",
       "dropdown": "Выпадающий",
       "edit": "Редактировать",
-      "email": "Email",
-      "emailError": "Пожалуйста, введите имя пользователя или удалите это поле",
+      "email": "Электронная почта",
+      "emailPlaceHolder": "Введите электронную почту",
+      "emailError": "Пожалуйста, введите электронную почту",
       "notValidEmail":"Пожалуйста, введите действительный адрес электронной почты!",
       "error": "Ошибка",
       "feed": "Кормить",
