added activate email for new user

--- a/src/locales/ru/translation.json
+++ b/src/locales/ru/translation.json
@@ -157,6 +157,7 @@
       "doctor": "Врач",
       "dropdown": "Выпадающий",
       "edit": "Редактировать",
+      "emailActivate": "Подтверждение электронной почты",
       "email": "Электронная почта",
       "emailPlaceHolder": "Введите электронную почту",
       "emailError": "Пожалуйста, введите электронную почту",
