The dashboard is divided into 2 different

--- a/src/locales/ru/translation.json
+++ b/src/locales/ru/translation.json
@@ -144,7 +144,7 @@
       "copied": "Скопировано в буфер обмена",
       "copy": "Копировать",
       "country": "Страна",
-      "dashboards": "Информация ИМНС и ЕГР",
+      "dashboards": "ИМНС и ЕГР",
       "nft-dashboard": "Поиск Субъектов",
       "medical-dashboard": "Medical Dashboard",
       "dataDisplay": "Отображение данных",
@@ -180,6 +180,7 @@
       "kg": "кг",
       "lastName": "Фамилия",
       "leafletMap": "Карты-листовки",
+      "legalEntity": "Юридические лица",
       "loading": "Загрузка...",
       "lock": "Замок",
       "login": "Авторизация",
@@ -224,6 +225,7 @@
       "signUpTitle": "Регистрация",
       "signUp": "Зарегистрироваться",
       "skeleton": "Скелет",
+      "soleTrade": "ИП",
       "specifity": "Специфичность",
       "spinner": "Волчок",
       "steps": "Шаги",
