changed submit button in changing password

--- a/src/locales/ru/translation.json
+++ b/src/locales/ru/translation.json
@@ -138,7 +138,7 @@
       "city": "Город",
       "clientError": "Ошибка клиента",
       "collapse": "Коллапс",
-      "confirm": "Подтверждать",
+      "confirm": "Подтвердить",
       "confirmPassword": "Подтвердите пароль",
       "confirmPasswordError": "Два введенных вами пароля не совпадают!",
       "copied": "Скопировано в буфер обмена",
@@ -434,7 +434,7 @@
           "birthday": "День рождения",
           "birthdayError": "День рождения обязателен",
           "cityError": "Требуется город",
-          "confirm": "Подтверждать",
+          "confirm": "Подтвердить",
           "confirmPasswordError": "Требуется подтвердить пароль",
           "countryError": "Требуется страна",
           "done": "Сделано",
