fixed bugs dashboard

--- a/src/locales/ru/translation.json
+++ b/src/locales/ru/translation.json
@@ -144,7 +144,7 @@
       "copied": "Скопировано в буфер обмена",
       "copy": "Копировать",
       "country": "Страна",
-      "dashboards": "ИМНС и ЕГР",
+      "dashboards": "Аналитический дашборд",
       "nft-dashboard": "Поиск Субъектов",
       "medical-dashboard": "Medical Dashboard",
       "dataDisplay": "Отображение данных",
@@ -181,6 +181,10 @@
       "lastName": "Фамилия",
       "leafletMap": "Карты-листовки",
       "legalEntity": "Юридические лица",
+      "created": "Созданные",
+      "liquidated": "Ликвидированные",
+      "bankrupted": "Обонкроченные",
+      "checked": "Проверенные",
       "loading": "Загрузка...",
       "lock": "Замок",
       "login": "Авторизация",
